[hue] adopt reviewer requests (part 1)
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>